# fantasy_court

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  README.md  biome.jsonc  docker-compose.yml  template.env
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/blank/api/: deps.py  interfaces.py  main.py
backend/blank/db/: redis.py  session.py
backend/blank/db/migrations/: env.py
backend/blank/jobs/: celery.py  schedule.py  tasks.py
backend/blank/utils/: bucket.py  observe.py
backend/court/api/: deps.py  interfaces.py  main.py
backend/court/api/templates/: opinion.html
backend/court/cli/: main.py
backend/court/db/: models.py  pg_objects.py  redis.py  session.py
backend/court/db/migrations/: env.py
backend/court/db/migrations/versions/: 0cba6b67d43f_update_citation_schema.py  13146c8ea2ea_add_more_fantasy_tables.py  177b39a4992e_add_bucket_path_to_episode.py  17a6a81ff881_add_provenance_ids.py  17e2a9977bf0_add_segment_id_to_transcript_table.py  a78cae674fca_add_tasks.py  (+10 more)
backend/court/experiments/: fix_justice_name_formatting.py  fix_transcripts.py  transcribe_exp.py
backend/court/export/: commands.py  export_opinions.py
backend/court/inference/: commands.py  create_cases.py  create_citations.py  create_opinions.py  create_segments.py  editor_agent.py  transcribe_exp.py  transcribe_segments.py  transcribe_segments_assemblyai.py  transcript.py  utils.py
backend/court/ingest/: commands.py  download_to_bucket.py  ingest_episodes.py
backend/court/jobs/: celery.py  schedule.py  tasks.py
backend/court/pipeline/: __init__.py  commands.py
backend/court/utils/: bucket.py  observe.py  print.py
backend/test/: __init__.py  conftest.py  factories.py
backend/test/api/: test_tasks_api.py
(+61 files in other folders)
